chore(deploy): update deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,13 +34,13 @@ jobs:
             dev)
               echo "NODE_ENV=development" >> $GITHUB_ENV
               echo "DATABASE_URL=${{ secrets.DATABASE_URL_DEV }}" >> $GITHUB_ENV
-              echo "ALIAS=dev.graphql-api-hexagonal-eduardotalaveras-projects.vercel.app" >> $GITHUB_ENV
+              echo "ALIAS=dev-graphql-api-hexagonal-eduardotalaveras-projects.vercel.app" >> $GITHUB_ENV
               echo "VERCEL_ENV=preview" >> $GITHUB_ENV
               ;;
             qa)
               echo "NODE_ENV=qa" >> $GITHUB_ENV
               echo "DATABASE_URL=${{ secrets.DATABASE_URL_QA }}" >> $GITHUB_ENV
-              echo "ALIAS=qa.graphql-api-hexagonal-eduardotalaveras-projects.vercel.app" >> $GITHUB_ENV
+              echo "ALIAS=qa-graphql-api-hexagonal-eduardotalaveras-projects.vercel.app" >> $GITHUB_ENV
               echo "VERCEL_ENV=preview" >> $GITHUB_ENV
               ;;
             main)
